--- a/languages/sliderpro.po
+++ b/languages/sliderpro.po
@@ -825,7 +825,7 @@ msgstr ""
 msgid ""
 "When you select images to insert them into the slider, you can set their "
 "size from the right column of the Media Library window, as you can see in <a "
-"href=\"http://bqworks.net/slider-pro/screencasts/#simple-slider\" target="
+"href=\"https://bqworks.net/slider-pro/screencasts/#simple-slider\" target="
 "\"_blank\">this video</a> at 0:05."
 msgstr ""
 
